--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,7 @@
 body{
+   
+    overflow-x: hidden;
     margin: 0 auto;
-    box-sizing: border-box;
+    
     font-family: 'Times New Roman', Times, serif;
 }
