--- a/src/about.module.css
+++ b/src/about.module.css
@@ -1,3 +1,4 @@
+
 .head{
     position:fixed;
     margin-top: 61px;
@@ -5,31 +6,41 @@
     width:100%;
     text-align: center;
     color:blue;
-    font-size: 45px;
+    font-size: 30px;
     padding: 10px;
     z-index: 1000;
 }
 
 .text{
-padding: 30px;
-background-color: lightgray;
-font-size:23px;
+    background-color: lightgray;
+    padding: 19px;
+    color: blue;
+    margin-left: 12%;
+    width:70%;
+    text-align: left;
+    font-size: 19px;
+    border-radius: 8px;
+    box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.4);
+    margin-bottom: 40px;
+    margin-top: 18px;
 
 }
-.image{
-   margin-left: 35%;
+.image{  
+
+    margin-left: 37%;
    margin-top:140px;
    border-radius: 10%;
+   width:30%;
 }
 .contact{
     background-color: blue;
     color:white;
     padding: 20px;
-    width:60%;
+    width:75%;
     border-radius: 15px;
     box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.5);
     margin-top: 20px;
-    margin-left: 16%;
+    margin-left: 9%;
     margin-bottom: 20px;
     font-size:20px;
 }
