--- a/src/aboutnavbar.module.css
+++ b/src/aboutnavbar.module.css
@@ -13,25 +13,32 @@
     padding-bottom: 2px;
     padding-top: 5px;
     margin-top: px;
+    font-weight: bold;
     
 }
 .home{
     padding: 11px;
-    font-size: 18px;
+    font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 10%;
+    width: 8%;
     text-align: center;
     margin-right: 8px;
    text-decoration: none;
     border-radius: 8px;
+
+    
+
+
+
 }
 
 .job{
     padding: 11px;
-    font-size: 18px;
+    font-size: 15px;
     color:white;
     cursor: pointer;
+ 
     width: 8%;
     text-align: center;
     margin-right: 8px;
@@ -42,10 +49,10 @@
 
 .addJob{
     padding: 11px;
-    font-size: 18px;
+    font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 17%;
+    width: 12%;
     text-align: center;
     margin-right: 20px;
     border-radius: 8px;
@@ -61,10 +68,10 @@
 }
 .about{
     padding: 11px;
-    font-size: 18px;
+    font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 15%;
+    width: 14%;
     text-align: center;
     margin-right: 20px;
     border-radius: 8px;
