--- a/src/aboutnavbar.module.css
+++ b/src/aboutnavbar.module.css
@@ -17,11 +17,14 @@
     
 }
 .home{
-    padding: 11px;
+  
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 8%;
+
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 8px;
    text-decoration: none;
@@ -34,12 +37,13 @@
 }
 
 .job{
-    padding: 11px;
+    
     font-size: 15px;
     color:white;
     cursor: pointer;
- 
-    width: 8%;
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 8px;
     border-radius: 8px;
@@ -48,13 +52,16 @@
 }
 
 .addJob{
-    padding: 11px;
+    
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 12%;
+
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 8px;
     text-decoration: none;
 }
@@ -67,16 +74,19 @@
     
 }
 .about{
-    padding: 11px;
+   
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 14%;
+    background-color: darkblue;
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 20px;
     border-radius: 8px;
     text-decoration: none;
-    background-color: darkblue;
+  
 }
 
 
