--- a/src/addjobnavbar.module.css
+++ b/src/addjobnavbar.module.css
@@ -15,11 +15,13 @@
     
 }
 .home{
-    padding: 11px;
+   
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 8%;
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 8px;
    text-decoration: none;
@@ -27,11 +29,14 @@
 }
 
 .job{
-    padding: 11px;
+  
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 8%;
+   
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 8px;
     border-radius: 8px;
@@ -39,11 +44,14 @@
     text-decoration: none;
 }
 .about{
-    padding: 11px;
+    
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 14%;
+    
     text-align: center;
     margin-right: 8px;
    text-decoration: none;
@@ -51,13 +59,16 @@
 }
 
 .addJob{
-    padding: 11px;
+  
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 12%;
+    
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 8px;
     text-decoration: none;
     background-color: darkblue;
