--- a/src/jobnavbar.module.css
+++ b/src/jobnavbar.module.css
@@ -15,11 +15,14 @@
     
 }
 .home{
-    padding: 11px;
+   
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 8%;
+   
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 8px;
    text-decoration: none;
@@ -27,11 +30,14 @@
 }
 
 .job{
-    padding: 11px;
+    
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 8%;
+    
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 8px;
     border-radius: 8px;
@@ -40,22 +46,28 @@
 }
 
 .addJob{
-    padding: 11px;
+    
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 12%;
+     
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 8px;
     text-decoration: none;
 }
 .about{
-    padding: 11px;
+  
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 14%;
+    
+    width: 15%;
+    padding-top:10px;
+    height:30px;
     text-align: center;
     margin-right: 20px;
     border-radius: 8px;
