--- a/src/about.module.css
+++ b/src/about.module.css
@@ -7,7 +7,8 @@
     text-align: center;
     color:blue;
     font-size: 30px;
-    padding: 10px;
+    height:45px;
+    padding-top:10px;
     z-index: 1000;
 }
 
@@ -15,7 +16,7 @@
     background-color: lightgray;
     padding: 19px;
     color: blue;
-    margin-left: 12%;
+    margin-left: 11%;
     width:70%;
     text-align: left;
     font-size: 19px;
@@ -40,7 +41,7 @@
     border-radius: 15px;
     box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.5);
     margin-top: 20px;
-    margin-left: 9%;
+    margin-left: 8%;
     margin-bottom: 20px;
     font-size:20px;
 }
