--- a/src/addjob.module.css
+++ b/src/addjob.module.css
@@ -12,11 +12,13 @@
     position:fixed;
     color:blue;
     width:100%;
-    padding:15px;
     background-color: lightgray;
     font-size: 25px;
     font-weight: bold;
     margin-top: 61px;
+    height:50px;
+    padding-top:20px;
+    
     
 }
 .form{
