--- a/src/navbar.module.css
+++ b/src/navbar.module.css
@@ -18,7 +18,7 @@
     font-size: 15px;
     color:white;
     cursor: pointer;
-    width: 13%;
+    width: 15%;
     padding-top:10px;
     height:30px;
     text-align: center;
@@ -68,6 +68,7 @@
     height:30px;
     text-align: center;
     border-radius: 8px;
+    margin-right: 20px;
     text-decoration: none;
 }
 .line{
