--- a/src/addjob.module.css
+++ b/src/addjob.module.css
@@ -3,7 +3,7 @@
 .all{
     display:flex;
     justify-content: center; 
-    
+    align-items: center;
     
 }
 .heading{
@@ -22,11 +22,12 @@
     
 }
 .form{
-    margin-top:150px;
+    margin-top:170px;
     box-shadow: 0px 3px 6px rgba(184, 136, 136, 0.8);
     padding:30px;
     margin-bottom:30px;
     border-radius:15px;
+   
 }
 .head{
     font-size:18px;
@@ -36,13 +37,14 @@
 }
 .in{
     width: 90%;
-    padding: 6px;
+    padding: 10px;
     border: none;
     outline: none;
     background-color: lightgray;
     border-radius: 20px;
     padding-left: 10px;
     margin-bottom: 10px;
+    font-size: 16px;
 }
 .type{
     width: 97%;
