--- a/src/homecard.module.css
+++ b/src/homecard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 25px;
+  margin-top: 30px;
  
   
 }
@@ -42,3 +42,43 @@ text-decoration: none;
     opacity: 0.8;
 }
 
+@media(min-width:700px){
+.job{
+  width:50%;
+  padding:30px
+}
+.topic{
+  font-size:25px
+  
+}
+.btn{
+  font-size:18px
+}
+.paragraph{
+  font-size:20px
+}
+
+
+}
+
+
+
+
+@media(min-width:1200px){
+  .job{
+    width:50%;
+    padding:45px
+  }
+  .topic{
+    font-size:29px
+    
+  }
+  .btn{
+    font-size:20px
+  }
+  .paragraph{
+    font-size:24px
+  }
+  
+  
+  }
