--- a/src/jobinfo.module.css
+++ b/src/jobinfo.module.css
@@ -6,14 +6,18 @@
   background-color: lightgray;
   width: 100%;
   padding-left: 40px;
+  height:30px;
 }
 .arrow {
   text-decoration: none;
-  font-size: 50px;
+  font-size: 25px;
+ 
 }
 .list {
-  font-size: px;
+  font-size: 15px;
+  margin-bottom:20px;
   margin-left: 5px;
+
   color: blue;
 }
 .all {
@@ -21,7 +25,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 70px;
   width: 100%;
 
   margin-bottom: 20px;
